--- a/bower.json
+++ b/bower.json
@@ -1,20 +1,14 @@
 {
-  "name": "bootstrap-daterangepicker",
+  "name": "bulma-daterangepicker",
   "main": [
     "daterangepicker.js",
     "daterangepicker.css"
   ],
   "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests",
-    "moment.js",
-    "moment.min.js"
+    "demo.html"
   ],
   "dependencies": {
     "jquery": "1.9.1 - 3",
     "moment": ">=2.9.0"
- }
+  }
 }
